Use gradle toolchain